@@ -1031,22 +1031,22 @@ g_local_file_find_enclosing_mount (GFile         *file,
 
   if (g_lstat (local->filename, &buf) != 0)
     {
-      /* Translators: This is an error message when trying to find the
-         enclosing (user visible) mount of a file, but none exists. */
-      g_set_error (error, G_IO_ERROR,
-		   G_IO_ERROR_NOT_FOUND,
-		   _("Containing mount does not exist"));
+      g_set_error (error, G_IO_ERROR, G_IO_ERROR_NOT_FOUND,
+		      /* Translators: This is an error message when trying to
+		       * find the enclosing (user visible) mount of a file, but
+		       * none exists. */
+		      _("Containing mount does not exist"));
       return NULL;
     }
 
   mountpoint = find_mountpoint_for (local->filename, buf.st_dev);
   if (mountpoint == NULL)
     {
-      /* Translators: This is an error message when trying to find the
-         enclosing (user visible) mount of a file, but none exists. */
-      g_set_error (error, G_IO_ERROR,
-		   G_IO_ERROR_NOT_FOUND,
-		   _("Containing mount does not exist"));
+      g_set_error (error, G_IO_ERROR, G_IO_ERROR_NOT_FOUND,
+		      /* Translators: This is an error message when trying to
+		       * find the enclosing (user visible) mount of a file, but
+		       * none exists. */
+		      _("Containing mount does not exist"));
       return NULL;
     }
 
@@ -1055,11 +1055,11 @@ g_local_file_find_enclosing_mount (GFile         *file,
   if (mount)
     return mount;
 
-  /* Translators: This is an error message when trying to find the
-     enclosing (user visible) mount of a file, but none exists. */
-  g_set_error (error, G_IO_ERROR,
-	       G_IO_ERROR_NOT_FOUND,
-	       _("Containing mount does not exist"));
+  g_set_error (error, G_IO_ERROR, G_IO_ERROR_NOT_FOUND,
+		  /* Translators: This is an error message when trying to find
+		   * the enclosing (user visible) mount of a file, but none
+		   * exists. */
+		  _("Containing mount does not exist"));
   return NULL;
 }
 
